--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
       
        <!-- About Section -->
   
-    <footer class="footer">
+       <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -114,8 +114,28 @@
                   <span>Content</span>
                 </p>
               </div>
+              <div class="footer-menu">
+                <p>
+                  <span>Contact us:</span>
+                  <span>+977 9876543210 |</span>
+                  <span>193 Lakeside Rd N ,Pokhara, Nepal</span>
+                </p>
+              </div>
+              <div class="footer-social-media">
+                <p>
+                 <!-- Facebook -->
+                 <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook me-2"></i>Facebook</a>
+  
+                  <!-- Twitter -->
+                  <a class="btn btn-primary" style="background-color: #55acee;" href="#!" role="button"><i class="fab fa-twitter me-2"></i>Twitter</a>
+  
+                  <!-- Instagram -->
+                  <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram me-2"></i>Instagram</a>
+     
+                </p>
+              </div>
               <div class="footer-copyright">
-                <p>Copyright © Manish Ranabhat |  All Rights Reserved.</p>
+                <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All Rights Reserved | Travel Nepal</p>
               </div>
             </div>
           </div>
