--- a/destination.html
+++ b/destination.html
@@ -18,6 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Travel Nepal">
     <meta name="msapplication-TitleImage" content="images/travel-nepal-144.png">
     <meta name="msapplication-TitleColor" content="#FFFFFF">
+    <script src="https://kit.fontawesome.com/c28eb6703a.js" crossorigin="anonymous"></script>
     <title>Travel</title>
 </head>
 <body>
@@ -69,13 +70,36 @@
               <div class="col-12">
                 <div class="card-wrap">
                   <div class="card-img-wrap">
-                    <img src="https://dummyimage.com/200x200/9798a6/fff" alt="">
+                    <img src="./images/image1.jpeg" alt="">
                   </div>
                   <div class="card-text-wrap">
-                    <h4>This is destination Section</h4>
+                    <h4>Annapurna Base Camp</h4>
                     <p>
                       Proin dapibus nisl ornare diam varius ecos tempus. Aenean a quam luctus, finibus tellus ut, convallis eros.
                     </p>
+                    <div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item list-group-item-danger"><span class="list-title">Country</span><div><span>Nepal</span></div></i>
+                      </li>
+                      <li class="list-group-item list-group-item-success "><span class="list-title">Duration</span><div><span>11 days</span></div></li>
+                      <li class="list-group-item list-group-item-warning"><span class="list-title">Difficulty Level</span><div class="checked"><span class="fas fa-star"></span>
+                        <span class="fas fa-star"></span>
+                        <span class="fas fa-star"></span>
+                        <span class="fas fa-star-half-alt"></span>	
+                        <span class="far fa-star"></span></div></li>
+                      <li class="list-group-item list-group-item-info"><span class="list-title">Maximum Altitude</span><div><span>4130 m</span></div></li>
+                      <li class="list-group-item list-group-item-primary"><span class="list-title">Best Season</span><div><span>Spring & Autumn</span></div></li>
+                    </ul>
+                  </div>
+                    <div class="card-body">
+                      <div><li class="list-group-item d-flex justify-content-between align-items-center active">
+                        Expedition Success
+                        <span class="badge badge-primary badge-pill">100%</span>
+                      </li>
+                      </div>
+                      <div><button type="button" class="btn btn-outline-info">More Info</button></div>
+                    </div>
+                  
                   </div>
                 </div>
               </div>
@@ -87,7 +111,7 @@
   
 
 
-    <footer class="footer">
+       <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -103,8 +127,28 @@
                   <span>Content</span>
                 </p>
               </div>
+              <div class="footer-menu">
+                <p>
+                  <span>Contact us:</span>
+                  <span>+977 9876543210 |</span>
+                  <span>193 Lakeside Rd N ,Pokhara, Nepal</span>
+                </p>
+              </div>
+              <div class="footer-social-media">
+                <p>
+                 <!-- Facebook -->
+                 <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook me-2"></i>Facebook</a>
+  
+                  <!-- Twitter -->
+                  <a class="btn btn-primary" style="background-color: #55acee;" href="#!" role="button"><i class="fab fa-twitter me-2"></i>Twitter</a>
+  
+                  <!-- Instagram -->
+                  <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram me-2"></i>Instagram</a>
+     
+                </p>
+              </div>
               <div class="footer-copyright">
-                <p>Copyright © Manish Ranabhat |  All Rights Reserved.</p>
+                <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All Rights Reserved | Travel Nepal</p>
               </div>
             </div>
           </div>
