--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Travel Nepal">
     <meta name="msapplication-TitleImage" content="images/travel-nepal-144.png">
     <meta name="msapplication-TitleColor" content="#FFFFFF">
+    <script src="https://kit.fontawesome.com/c28eb6703a.js" crossorigin="anonymous"></script>
 
     <title>Travel</title>
 </head>
@@ -240,8 +241,28 @@
                 <span>Content</span>
               </p>
             </div>
+            <div class="footer-menu">
+              <p>
+                <span>Contact us:</span>
+                <span>+977 9876543210 |</span>
+                <span>193 Lakeside Rd N ,Pokhara, Nepal</span>
+              </p>
+            </div>
+            <div class="footer-social-media">
+              <p>
+               <!-- Facebook -->
+               <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i class="fab fa-facebook me-2"></i>Facebook</a>
+
+                <!-- Twitter -->
+                <a class="btn btn-primary" style="background-color: #55acee;" href="#!" role="button"><i class="fab fa-twitter me-2"></i>Twitter</a>
+
+                <!-- Instagram -->
+                <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i class="fab fa-instagram me-2"></i>Instagram</a>
+   
+              </p>
+            </div>
             <div class="footer-copyright">
-              <p>Copyright © Manish Ranabhat |  All Rights Reserved.</p>
+              <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All Rights Reserved | Travel Nepal</p>
             </div>
           </div>
         </div>
