add notification and badge

--- a/destination.html
+++ b/destination.html
@@ -97,7 +97,7 @@
                         <span class="badge badge-primary badge-pill">100%</span>
                       </li>
                       </div>
-                      <div><button type="button" class="btn btn-outline-info">More Info</button></div>
+                      <div><button type="button" class="btn btn-outline-info" onclick="displayNotification()">More Info</button></div>
                     </div>
                   
                   </div>
